Use wildcard for RequestAttributes